--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
   {% block title %}Koiratietokanta{% endblock %}
 {% block content %}
+<div class="annoucment">
 <h2>Ilmoitukset</h2>
+</div>
 <ul>
     {% for dog in dogs %}
     <div class="dogs">
