--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,16 @@
 body {
-  margin: auto;
+  margin: 0 auto;
   max-width: 50em;
   font-family: sans-serif;
   background-color: rgba(150, 128, 74, 0.279);
 }
-
+.header {
+    background-color:rgba(57, 48, 26, 0.501);
+    color: rgb(250, 250, 250);
+    padding: 1em;
+    margin: 0.5em 0;
+    text-align: center;
+}
 .dogs {
   border: 2px solid black;
   margin: 1em;
@@ -16,4 +22,27 @@ body {
   padding: 0.5em;
   background-color: rgba(74, 63, 34, 0.068);
   color: rgb(0, 0, 0);
+  text-align: center;
+}
+.nav {
+  background-color: rgba(82, 71, 43, 0.279);
+  padding: 0.3em;
+  margin: 0.3em 0.3;
+  text-align: center;
+}
+
+.nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+.nav li {
+  display: inline-block;
+  padding: 0 1em;
+  margin: 0;
+}
+
+.annoucment {
+text-align: center;
+text-decoration: underline;
 }
