--- a/templates/show_dog.html
+++ b/templates/show_dog.html
@@ -1,22 +1,20 @@
 {% extends "layout.html" %}
+
 {% block title %}{{dog.dogname}}{% endblock %}
+
 {% block content %}
 <h2>{{dog.dogname}}</h2>
 {% if dog.user_id  == session.user_id %}
-    <form action="/edit_dog/{{dog.dog_id}}" method="GET">
-        <button type="submit">Muokkaa tietoja</button>
-    </form>
-    <form action="/remove_dog/{{dog.dog_id}}" method="GET">
-        <button type="submit">Poista koira</button>
-    </form>
-    <form action="/images/{{dog.dog_id}}" method="GET">
-        <button type="submit">Kuvat</button>
-    </form>
-    {% for image in images %}
-        <img src="/image/{{ image.id }}" alt="Ilmoituksen kuva" />
-    {% endfor %}
+<p>
+  <a href="/edit_dog/{{ dog.dog_id }}">Muokkaa</a>
+  <a href="/remove_dog/{{ dog.dog_id }}">Poista</a>
+  <a href="/images/{{ dog.dog_id }}">Kuvat</a>
+</p>
 {% endif %}
-<p>Rotu: {{ dog.breed }}</p>
+    {% for image in images %}
+ <img src="/image/{{ image.id }}" alt="Ilmoituksen kuva" />
+{% endfor %}
+ <p>Rotu: {{ dog.breed }}</p>
 <p>Ikä: {{ dog.age }}</p>
 <p>Sukupuoli: {{ dog.gender }}</p>
 <p>Ilmoittaja: <a href="/user/{{ dog.user_id }}">{{ dog.user_name }}</a></p>
