--- a/templates/edit_dog.html
+++ b/templates/edit_dog.html
@@ -50,3 +50,6 @@
     <button type="submit">Peruuta</button>
 </form>
 {% endblock %}
+
+
+##en vaan saa nappeja vierekkäin vaikka yrittäny käyttää css ym.
